# vehicle-sales-predictor

./: LICENSE  Makefile  README.md  pyproject.toml
configs/: cleaning.yaml
notebooks/: 01_Initial_EDA.ipynb  02_Feature_Engineering.ipynb  03_Final_EDA.ipynb  No_FE_DF.ipynb  tests.ipynb
src/data/: cleaning.py
vehicle-sales-predictor/: Makefile  README.md
