[tool.poetry]
name = "vehicle-sales-predictor"
version = "0.1.0"
description = "Predict the sales and prices of vehicles based on their features."
authors = ["Joan Dies"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
jupyterlab = "^4.3.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
